--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" title="Дубов Данил Денисовчи">
 <head>
   <meta charset="UTF-8">
+  <style>
+    img { border: 1px solid #ccc; }
+    .fast { 
+     image-rendering: optimizeSpeed;
+    }
+   </style>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="styles.css">
   <title>Document</title>
@@ -9,7 +15,6 @@
 <body>
   <h1>CUM INSIDE DADY</h1>
   <p> cum cum cum cum cum cum cum cum</p>
-  <p> cum cum cum cum cum cum cum cum</p>
-  <p> cum cum cum cum cum cum cum cum</p>
+  <p><img src="images/itsMe.png" alt="Флаг России" width="200">
 </body>
 </html>
