--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <body>
   <h1>CUM INSIDE DADY</h1>
   <p> cum cum cum cum cum cum cum cum</p>
-  <p><img src="images/itsMe.png" alt="Флаг России" width="200">
+  <p><img src="images/itsMe.png" alt="Попиваем пивко" width="200">
 </body>
 </html>
