--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="navbar">
+    <header id="h-navbar">
+        <ul id="m-navbar">
+            <p> cum cum cum cum cum cum cum cum</p>
+            <li><img src="images/itsMe.png" style="width: 65px;"></li>
+        </ul>
+    </header>
+  </div>
   <h1>CUM INSIDE DADY</h1>
-  <p> cum cum cum cum cum cum cum cum</p>
-  <p><img src="images/itsMe.png" alt="Попиваем пивко" width="200">
 </body>
 </html>
