--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <style>
-    img { border: 1px solid #ccc; }
-    .fast { 
+    image.fast { 
      image-rendering: optimizeSpeed;
     }
    </style>
