--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   </header>
 
   <div id="top">
-    <h1> Студент ИТМО </h1>
-    <h3> Люблю физику и электротехнику </h3>
+    <h1>Студент ИТМО</h1>
+    <h3>Cвоего рода электрон</h3>
+    <h3>Люблю физику, электротехнику и web</h3>
   </div>
 
   <div id="formulaForSuccess">
@@ -104,55 +105,16 @@
 
             ._      ._      ._      ._
           _.-._)`\_.-._)`\_.-._)`\_.-._)`\_.-._
-
-          Если кто-то что-то от меня хочет
-          Если кто-то меня достать пытается
-          Пусть он лучше о себе похлопочет
-          Может быть, он последний раз улыбается
-          Мне всё равно, что он там представляет
-          Пугает меня, нагоняя страху
-          Его всего-навсего три слова ожидают
-          "Эй ты, пошёл на хуй"
-
-          Я люблю людей......
-
-          Кто-то считает себя умнее других
-          Умный парень, куда деваться
-          Интересно, что же он будет делать без них
-          Как и над кем он будет издеваться
-          Ух, ненавижу таких, как он
-          Считает, что мозг его интеллектом полон
-          И говорит он только лишь о себе одном
-          У, бля, да пошёл он
-
-          Я люблю людей......
-
-          А этот типа самый здоровый
-          Сил дохрена, а мозг отсутствует
-          Сразу видно – рождён был коровой
-          Так, для мебели везде присутствует
-          И, если будет необходимо
-          Он скажет всего две буквы – "му"
-          А у меня есть три слова для этого дебила
-          "Эй ты, пошёл в пизду"
-
-          Я люблю людей......
-          
-          "Стоять на месте, руки за голову"
-          Орёт мне директор мира
-          Ему, наверное, власть ударила в голову
-          Приобретённый синдром командира
-          С этим парнем опасно иметь дело
-          Он может ударить тебя с размаху
-          Так что лучше поберечь своё тело
-          И про себя послать его на хуй
-
-          Я люблю людей......
         </code>
      </pre>
     </div>
   </div>
 
+  <div id="footer">
+    <footer>
+        <font id="f-footer">© Дубов Данил Денисович</font>
+    </footer>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
