--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <div id="formulaForSuccess">
     <div class="intro">
       <h2>Формула успеха ИТ-компаний</h2>
+      <span>Троечка и разбежались<B></span>
       <span>PR+GR+IR=IT</span>
     </div>
 
