add list fix styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
   <div id="top">
     <h1>Студент ИТМО</h1>
     <h3>Cвоего рода электрон</h3>
-    <h3>Люблю физику, электротехнику и web</h3>
+    <h3>Нахожусь в теплых отношениях с :</h3>
+    <ul type="circle">
+      <li>Физикой</li>
+      <li>Электротехникой</li>
+      <li>Мужчинами</li>
+      <li>web программированием</li>
+    </ul>
+    
   </div>
 
   <div id="formulaForSuccess">
@@ -83,10 +90,6 @@
      </pre>
     </div>
   </div>
-
-  <style>
-
-  </style>
 
   <div id="animal">
     <div class="intro">
