--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <h1>Студент ИТМО</h1>
     <h3>Cвоего рода электрон</h3>
     <h3>Нахожусь в теплых отношениях с :</h3>
-    <ul type="circle">
-      <li>Физикой</li>
-      <li>Электротехникой</li>
-      <li>Мужчинами</li>
-      <li>web программированием</li>
+    <ul class="leaf">
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> Физикой <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> Электротехникой <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> Мужчинами <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> web программированием <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
     </ul>
     
   </div>
