--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <div id="top">
     <h1>Студент ИТМО</h1>
     <h3>Cвоего рода электрон</h3>
-    <h3>Нахожусь в теплых отношениях с :</h3>
+    <h3>Be with web programming it's so horny, because</h3>
     <ul class="leaf">
-      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> Физикой <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
-      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> Электротехникой <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
-      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> Мужчинами <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
-      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> web программированием <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> html <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> мой любимый <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> язык <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
+      <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"> программирования <img src="images/itsMe.png" width="40" height="40" alt="Avatar" id="hp"></li>
     </ul>
     
   </div>
