--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div id="logo" onclick="slowScroll('#top')">
       <img src="images/itsMe.png" width="75" height="75" alt="Avatar" id="hp">
-      <span>Дубов Данил</span>
+      <span><b>Дубов Данил</b></span>
     </div>
 
     <div id="about">
@@ -39,7 +39,7 @@
   <div id="formulaForSuccess">
     <div class="intro">
       <h2>Формула успеха ИТ-компаний</h2>
-      <span>Троечка и разбежались<B></span>
+      <span>Троечка и разбежались</span>
       <span>PR+GR+IR=IT</span>
     </div>
 
