delete slut from bestcode

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div id="bestCode">
     <div class="intro">
       <h2>Лучший код в мире?</h2>
-      <span>.swiftIsSlut?</span>
+      <span>.swift</span>
     </div>
   
     <div id="code">
