Добавил тени, насыщенность шрифта, исправил formulaForSuccess, поменял span на p в некоторых местах, <section id=top> внес правки, 1em = 12pt = 16px = 100%

--- a/index.html
+++ b/index.html
@@ -24,21 +24,19 @@
         <main>
             <section id="top">
                 <h1>Студент ИТМО</h1>
-                <h3>Cвоего рода электрон</h3>
-                <h3>Be with web programming it's so horny, because</h3>
+                <p>Be with web programming it's so horny, because: </p>
                 <ul class="leaf">
-                  <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar"> html <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
-                  <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar"> мой любимый <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
-                  <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar"> язык <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
-                  <li><img src="images/itsMe.png" width="40" height="40" alt="Avatar"> программирования <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
+                  <li>html <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
+                  <li>мой любимый <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
+                  <li>язык <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
+                  <li>программирования <img src="images/itsMe.png" width="40" height="40" alt="Avatar"></li>
                 </ul>
             </section>
 
             <section id="formulaForSuccess">
                 <div class="intro">
                   <h2>Формула успеха ИТ-компаний</h2>
-                  <span>Троечка и разбежались</span>
-                  <span>PR+GR+IR=IT</span>
+                  <p>Троечка и разбежались</p>
                 </div>
             
                 <div class="text">
@@ -61,7 +59,7 @@
             <section id="bestCode">
                 <div class="intro">
                     <h2>Лучший код в мире?</h2>
-                    <span>.swift</span>
+                    <p>.swift</p>
                 </div>
 
                 <div id="code">
@@ -86,7 +84,7 @@
             <section id="animal">
                 <div class="intro">
                   <h2><a href="https://open.spotify.com/track/0TUf9w0vFhdCbLJp7HKG6W?si=b5b6a6fba9834909">Я люблю людей</a></h2>
-                  <span>Дельфин</span>
+                  <p>Дельфин</p>
                 </div>
             
                 <div id="asciiPicture">
@@ -106,7 +104,7 @@ _.-._)`\_.-._)`\_.-._)`\_.-._)`\_.-._
         </main>
 
         <footer>
-            <font>© Дубов Данил Денисович</font>
+            <p>© Дубов Данил Денисович</p>
         </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
