flex for header | fix js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                       <a href="table.html" type="submenu" name="table">Таблица</a>
                       <a href="contacts.html" type="submenu" name="contacts">Контакты</a>
                     </div>
-                  </div>
+                </div>
             </nav>
         </header>
 
@@ -108,7 +108,7 @@ _.-._)`\_.-._)`\_.-._)`\_.-._)`\_.-._
         </main>        
         
         <footer>
-            <p>© Дубов Данил Денисович</p>
+            © Дубов Данил Денисович
         </footer>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
