--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <div id="logo" onclick="slowScroll('#top')">
                 <img src="images/itsMe.png" alt="Avatar" id="hp">
-                <span>Дубов Данил</span>
+                <span>ДубовДанил</span>
             </div>
 
             <nav id="about">
@@ -23,9 +23,9 @@
                 <div class="dropdown">
                     <button onclick="myFunction()" class="dropbtn">Меню</button>
                     <div id="myDropdown" class="dropdown-content">
-                      <a href="index.html" type="submenu" name="index">Основная</a>
-                      <a href="table.html" type="submenu" name="table">Таблица</a>
-                      <a href="contacts.html" type="submenu" name="contacts">Контакты</a>
+                      <a href="index.html" type="submenu" name="index" class="subMenuItem">Основная</a>
+                      <a href="table.html" type="submenu" name="table" class="subMenuItem">Таблица</a>
+                      <a href="contacts.html" type="submenu" name="contacts" class="subMenuItem">Контакты</a>
                     </div>
                 </div>
             </nav>
