--- a/table.html
+++ b/table.html
@@ -11,15 +11,17 @@
     <header>
         <div id="logo">
             <img src="images/itsMe.png" alt="Avatar" id="hp">
-            <span>Дубов Данил</span>
+            <span>ДубовДанил</span>
         </div>
 
-        <div id="about" class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Меню</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="index.html" type="submenu" name="index">Основная</a>
-                <a href="table.html" type="submenu" name="table">Таблица</a>
-                <a href="contacts.html" type="submenu" name="contacts">Контакты</a>
+        <div id="about">
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Меню</button>
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="index.html" type="submenu" name="index" class="subMenuItem">Основная</a>
+                  <a href="table.html" type="submenu" name="table" class="subMenuItem">Таблица</a>
+                  <a href="contacts.html" type="submenu" name="contacts" class="subMenuItem">Контакты</a>
+                </div>
             </div>
         </div>
     </header>
