--- a/contacts.html
+++ b/contacts.html
@@ -21,6 +21,7 @@
                   <a href="index.html" type="submenu" name="index" class="subMenuItem">Основная</a>
                   <a href="table.html" type="submenu" name="table" class="subMenuItem">Таблица</a>
                   <a href="contacts.html" type="submenu" name="contacts" class="subMenuItem">Контакты</a>
+                  <a href="todo.html" type="submenu" name="contacts" class="subMenuItem">ТУДУ</a>
                 </div>
             </div>
         </div>
