--- a/todo.html
+++ b/todo.html
@@ -73,4 +73,6 @@
                 });
             </script>
     </body>
+    <script src="https://unpkg.com/@mojs/core"></script>
+    <script src="js/bursts.js"></script>
 </html>
